package example;

public class Being {

    String name;

    Being(String name) {
        this.name = name;
    }

}