package example;

public class Human extends Creature {

    Human(String name) {
        super(name);
        health = 100;
        attack = 20;
        defense = 1;
    }

}
